--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module",
-        "project": [ "tsconfig.eslint.json" ]
+        "project": ["tsconfig.eslint.json"]
     },
     "plugins": [
         "@typescript-eslint",
@@ -35,10 +35,7 @@
         "@typescript-eslint/semi": "error",
         "no-unused-vars": "off",
         "curly": "error",
-        "eqeqeq": [
-            "error",
-            "always"
-        ],
+        "eqeqeq": ["error", "always"],
         "no-throw-literal": "warn",
         "semi": [2, "always"],
 
@@ -46,7 +43,6 @@
 
         "@typescript-eslint/adjacent-overload-signatures": "error",
         "@typescript-eslint/array-type": "error",
-        "@typescript-eslint/indent": "error",
         "@typescript-eslint/member-delimiter-style": [
             "error",
             {
@@ -102,20 +98,11 @@
         "no-unused-expressions": "error",
         "no-unused-labels": "error",
         "no-var": "error",
-        "one-var": [
-            "error",
-            "never"
-        ],
+        "one-var": ["error", "never"],
         "prefer-const": "error",
         "prefer-object-spread": "error",
-        "space-in-parens": [
-            "error",
-            "never"
-        ],
-        "spaced-comment": [
-            "error",
-            "always"
-        ],
+        "space-in-parens": ["error", "never"],
+        "spaced-comment": ["error", "always"],
         "use-isnan": "error",
         "valid-typeof": "error",
         "yoda": "error"
