--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "esnext",
         "moduleResolution": "node",
-        "lib": ["es6"],
+        "lib": ["esnext"],
         "rootDir": "src",
         /* The source root path for debuggers to find the reference source code */
         "sourceRoot": "./lib",
