--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,27 +3,25 @@
 // Hover to view descriptions of existing attributes.
 // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 {
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "All Tests",
-			"type": "node",
-			"request": "launch",
-			"program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index",
-			"args": [
-				"--config=./spec/support/jasmine.json"
-			],
-			"console": "integratedTerminal",
-			"internalConsoleOptions": "neverOpen"
-		},
-		{
-			"name": "Debug Jasmine Test",
-			"type": "node",
-			"request": "launch",
-			"program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index",
-			"args": ["--config=./spec/support/jasmine.json", "${file}"],
-			"console": "internalConsole",
-			"internalConsoleOptions": "neverOpen"
-		}
-	]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "All Tests",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index",
+            "args": ["--config=./spec/support/jasmine.json"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
+        },
+        {
+            "name": "Debug Jasmine Test",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/jasmine-ts/lib/index",
+            "args": ["--config=./spec/support/jasmine.json", "${file}"],
+            "console": "internalConsole",
+            "internalConsoleOptions": "neverOpen"
+        }
+    ]
 }
