Redownloaded all segments and struct files

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,10 @@
 {
     "extends": "./tsconfig.json",
-    "include": ["spec/**/*.ts", "examples/**/*.ts", ".eslintrc.json"],
+    "include": [
+        "spec/**/*.ts",
+        "examples/**/*.ts",
+        "src/*.ts",
+        ".eslintrc.json"
+    ],
     "exclude": ["node_modules"]
 }
