--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,6 @@
     // for the documentation about the extensions.json format
     "recommendations": [
         "ms-vscode.vscode-typescript-tslint-plugin",
-        "dbaeumer.vscode-eslint",
-        "msjsdiag.debugger-for-chrome"
+        "dbaeumer.vscode-eslint"
     ]
 }
