--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,21 +4,22 @@
 name: Run all tests
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Install Yarn
-      uses: actions/setup-node@v3
-      with:
-        node-version: '14'
-        cache: 'yarn'
-    - run: yarn test
+        steps:
+            - uses: actions/checkout@v3
+            - name: Install Yarn
+              uses: actions/setup-node@v3
+              with:
+                  node-version: '14'
+                  cache: 'yarn'
+            - name: Install Yarn dependencies
+              run: yarn --production=false --frozen-lockfile
+            - run: yarn test
