--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
-        "htmlparser2": "^7.2.0"
+        "htmlparser2": "^7.2.0",
+        "underscore": "^1.13.3"
     },
     "files": [
         "lib/**/*"
