--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@makakwastaken/ts-edifact",
     "description": "Edifact parser library",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "private": false,
     "type": "commonjs",
     "main": "lib/index.js",
@@ -76,8 +76,7 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
-        "htmlparser2": "^7.2.0",
-        "underscore": "^1.13.3"
+        "htmlparser2": "^7.2.0"
     },
     "files": [
         "lib/**/*"
