--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-    "bracketSpacing": true,
-    "singleQuote": true,
-    "trailingComma": "none",
-    "arrowParens": "always",
-    "semi": true,
-    "endOfLine": "auto",
-    "tabWidth": 4
+  "bracketSpacing": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "semi": false,
+  "endOfLine": "auto",
+  "organizeImportsSkipDestructiveCodeActions": false
 }
