--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,5 @@
 {
-    "extends": "./tsconfig.json",
-    "include": [
-        "spec/**/*.ts",
-        "examples/**/*.ts",
-        "src/*.ts",
-        ".eslintrc.json"
-    ],
-    "exclude": ["node_modules"]
+  "extends": "./tsconfig.json",
+  "include": ["spec/**/*.ts", "examples/**/*.ts", "src/*.ts", ".eslintrc.json"],
+  "exclude": ["node_modules"]
 }
