--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,7 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "project": ["tsconfig.eslint.json"]
+    "project": "./tsconfig.eslint.json"
   },
   "plugins": [
     "@typescript-eslint",
