--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "pretest": "npm run lint && npm run build",
     "test": "jasmine-ts --config=spec/support/jasmine.json",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" jasmine-ts JASMINE_CONFIG_PATH=spec/support/jasmine.json",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "prepare": "yarn build"
   },
   "devDependencies": {
     "@initics/tsm": "^1.0.2",
