--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "build": "tsc -b",
     "check": "npm run check:tsc",
     "check:tsc": "tsc -p . --noEmit",
-    "pretest": "npm run lint && npm run build",
+    "pretest": "yarn build",
     "test": "jasmine-ts --config=spec/support/jasmine.json",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" jasmine-ts JASMINE_CONFIG_PATH=spec/support/jasmine.json",
-    "prepublishOnly": "yarn build",
-    "prepare": "yarn build"
+    "prepublishOnly": "yarn lint && yarn build",
+    "prepare": "yarn lint && yarn build"
   },
   "devDependencies": {
     "@initics/tsm": "^1.0.2",
