Fixed bug with updated jasmine version

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "build": "tsc -b",
     "check": "npm run check:tsc",
     "check:tsc": "tsc -p . --noEmit",
-    "pretest": "yarn build",
-    "test": "jasmine-ts --config=spec/support/jasmine.json",
+    "pretest": "yarn build tsconfig.testing.json && shx cp -r ./spec/data ./lib/spec/",
+    "test": "jasmine --config=spec/support/jasmine.json",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" jasmine-ts JASMINE_CONFIG_PATH=spec/support/jasmine.json",
     "prepack": "yarn lint && yarn build"
   },
@@ -65,13 +65,11 @@
     "glob-parent": "^6.0.1",
     "jasmine": "^5.1.0",
     "jasmine-core": "^5.1.1",
-    "jasmine-node": "https://github.com/MakakWasTaken/jasmine-node",
     "jasmine-spec-reporter": "^7.0.0",
-    "jasmine-ts": "^0.4.0",
-    "jasmine-ts-console-reporter": "^3.1.1",
     "nyc": "^15.1.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
+    "shx": "^0.3.4",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
