--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "description": "Edifact parser library",
   "version": "0.2.9",
   "private": false,
-  "type": "commonjs",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
@@ -38,38 +37,35 @@
     }
   ],
   "scripts": {
-    "clean": "rm -rf ./lib ./dist",
+    "clean": "rm -rf ./build ./dist",
     "lint": "eslint --fix . && prettier --write .",
     "build": "tsc -b",
     "check": "npm run check:tsc",
     "check:tsc": "tsc -p . --noEmit",
-    "pretest": "yarn build tsconfig.testing.json && shx cp -r ./spec/data ./lib/spec/",
-    "test": "jasmine --config=spec/support/jasmine.json",
-    "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" jasmine-ts JASMINE_CONFIG_PATH=spec/support/jasmine.json",
+    "test": "jest spec",
+    "coverage": "yarn test --coverage",
     "prepack": "yarn lint && yarn build"
   },
   "devDependencies": {
     "@initics/tsm": "^1.0.2",
-    "@types/events": "3.0.2",
-    "@types/htmlparser2": "^3.10.6",
-    "@types/jasmine": "^5.1.1",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "@typescript-eslint/typescript-estree": "^6.8.0",
+    "@swc/jest": "^0.2.29",
+    "@types/events": "3.0.3",
+    "@types/htmlparser2": "^3.10.7",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/typescript-estree": "^6.10.0",
     "domhandler": "^5.0.3",
-    "eslint": "^8.51.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint": "^8.53.0",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.8.2",
     "events": "^3.1.0",
-    "glob-parent": "^6.0.1",
-    "jasmine": "^5.1.0",
-    "jasmine-core": "^5.1.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "nyc": "^15.1.0",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
-    "shx": "^0.3.4",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -77,10 +73,11 @@
     "webpack": "^5.89.0"
   },
   "dependencies": {
-    "axios": "^1.5.1",
+    "@swc/core": "^1.3.96",
+    "axios": "^1.6.0",
     "htmlparser2": "^9.0.0"
   },
   "files": [
-    "lib/**/*"
+    "build/**/*"
   ]
 }
