--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,8 @@ updates:
     directory: '/' # Location of package manifests
     schedule:
       interval: 'weekly'
+
+    commit-message:
+      prefix: ':arrow_up: upgrade'
+      prefix-development: ':truck: chore'
+      include: 'scope'
