--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest",
-      "args": [
-        "spec"
-      ],
+      "args": ["spec"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     },
@@ -21,9 +19,7 @@
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest",
-      "args": [
-        "${file}"
-      ],
+      "args": ["${file}"],
       "console": "internalConsole",
       "internalConsoleOptions": "neverOpen"
     }
