--- a/package.json
+++ b/package.json
@@ -44,9 +44,18 @@
     "check:tsc": "tsc -p . --noEmit",
     "test": "jest spec",
     "coverage": "yarn test --coverage",
-    "prepack": "yarn lint && yarn build"
+    "lint:staged": "lint-staged",
+    "prepack": "yarn lint && yarn build",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --fix .",
+    "*.{js,jsx,ts,tsx|json}": "prettier --write ."
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
+    "@commitlint/types": "^18.1.0",
     "@initics/tsm": "^1.0.2",
     "@swc/jest": "^0.2.29",
     "@types/events": "3.0.3",
@@ -61,8 +70,10 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.8.2",
     "events": "^3.1.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
     "ts-jest": "^29.1.1",
