--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@makakwastaken/ts-edifact",
   "description": "Edifact parser library",
   "version": "0.2.10",
-  "private": false,
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "license": "MIT",
@@ -10,11 +9,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "keywords": [
-    "edi",
-    "edifact",
-    "parser"
-  ],
+  "keywords": ["edi", "edifact", "parser"],
   "publisher": "Roman Vottner",
   "readme": "README.md",
   "author": {
@@ -37,10 +32,7 @@
     }
   ],
   "lint-staged": {
-    "*.ts": [
-      "biome lint --write",
-      "biome format --write"
-    ]
+    "*.ts": ["biome lint --write", "biome format --write"]
   },
   "scripts": {
     "clean": "rm -rf ./build ./dist",
@@ -55,43 +47,34 @@
     "prepare": "husky || true"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.2",
-    "@commitlint/cli": "^19.0.3",
-    "@commitlint/config-conventional": "^19.0.3",
+    "@biomejs/biome": "1.8.3",
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
     "@initics/tsm": "^1.0.2",
-    "@swc/jest": "^0.2.29",
+    "@swc/jest": "^0.2.36",
     "@types/events": "3.0.3",
     "@types/htmlparser2": "^3.10.7",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@typescript-eslint/typescript-estree": "^8.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.15",
     "domhandler": "^5.0.3",
-    "eslint": "^8.53.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsdoc": "^50.0.1",
-    "events": "^3.1.0",
-    "husky": "^9.0.10",
+    "events": "^3.3.0",
+    "husky": "^9.1.4",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.0",
-    "ts-node": "^10.9.1",
+    "lint-staged": "^15.2.9",
+    "ts-jest": "^29.2.4",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0"
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0"
   },
   "dependencies": {
-    "@swc/core": "^1.3.96",
-    "axios": "^1.6.0",
-    "htmlparser2": "^9.0.0"
+    "@swc/core": "^1.7.11",
+    "axios": "^1.7.4",
+    "htmlparser2": "^9.1.0"
   },
-  "files": [
-    "build/**/*"
-  ]
+  "files": ["build/**/*"],
+  "packageManager": "yarn@4.4.0"
 }
