--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@makakwastaken/ts-edifact",
   "description": "Edifact parser library",
-  "version": "0.2.10",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "version": "0.2.11",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
