--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,11 @@
 {
-  "extends": "./tsconfig.json",
-  "include": ["spec/**/*.ts", "examples/**/*.ts", "src/*.ts"],
-  "exclude": ["node_modules"]
+  "extends": "./tsconfig.base.json",
+  "include": [
+    "spec/**/*.ts",
+    "examples/**/*.ts",
+    "src/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
