--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "keywords": [
-    "edi",
-    "edifact",
-    "parser"
-  ],
+  "keywords": ["edi", "edifact", "parser"],
   "readme": "README.md",
   "author": {
     "name": "Roman Vottner"
@@ -37,10 +33,7 @@
     }
   ],
   "lint-staged": {
-    "*.ts": [
-      "biome lint --write",
-      "biome format --write"
-    ]
+    "*.ts": ["biome lint --write", "biome format --write"]
   },
   "scripts": {
     "clean": "rm -rf ./build ./dist",
@@ -85,8 +78,6 @@
     "axios": "^1.7.4",
     "htmlparser2": "^9.1.0"
   },
-  "files": [
-    "build/**/*"
-  ],
+  "files": ["build/**/*"],
   "packageManager": "yarn@4.4.0"
 }
