--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,11 +1,5 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": [
-    "spec/**/*.ts",
-    "examples/**/*.ts",
-    "src/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["spec/**/*.ts", "examples/**/*.ts", "src/*.ts"],
+  "exclude": ["node_modules"]
 }
