--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@makakwastaken/ts-edifact",
   "description": "Edifact parser library",
-  "version": "0.2.12",
+  "version": "0.2.13",
   "type": "module",
   "main": "build/cjs/src/index.js",
   "module": "build/esm/src/index.js",
@@ -11,7 +11,11 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "keywords": ["edi", "edifact", "parser"],
+  "keywords": [
+    "edi",
+    "edifact",
+    "parser"
+  ],
   "readme": "README.md",
   "author": {
     "name": "Roman Vottner"
@@ -33,7 +37,10 @@
     }
   ],
   "lint-staged": {
-    "*.ts": ["biome lint --write", "biome format --write"]
+    "*.ts": [
+      "biome lint --write",
+      "biome format --write"
+    ]
   },
   "scripts": {
     "clean": "rm -rf ./build ./dist",
@@ -51,33 +58,35 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@commitlint/cli": "^19.4.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/types": "^19.0.3",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@commitlint/types": "^19.8.0",
     "@initics/tsm": "^1.0.2",
-    "@swc/jest": "^0.2.36",
+    "@swc/jest": "^0.2.37",
     "@types/events": "3.0.3",
-    "@types/htmlparser2": "^3.10.7",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.4.1",
+    "@types/htmlparser2": "^4.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.17",
     "domhandler": "^5.0.3",
     "events": "^3.3.0",
-    "husky": "^9.1.4",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^15.2.9",
-    "ts-jest": "^29.2.4",
-    "ts-loader": "^9.5.1",
+    "lint-staged": "^15.5.0",
+    "ts-jest": "^29.3.1",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4",
-    "webpack": "^5.93.0"
+    "typescript": "^5.8.2",
+    "webpack": "^5.98.0"
   },
   "dependencies": {
-    "@swc/core": "^1.7.11",
-    "axios": "^1.7.4",
-    "htmlparser2": "^9.1.0"
+    "@swc/core": "^1.11.16",
+    "axios": "^1.8.4",
+    "htmlparser2": "^10.0.0"
   },
-  "files": ["build/**/*"],
-  "packageManager": "yarn@4.4.0"
+  "files": [
+    "build/**/*"
+  ],
+  "packageManager": "yarn@4.8.1"
 }
