--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@makakwastaken/ts-edifact",
   "description": "Edifact parser library",
-  "version": "0.2.14",
-  "type": "module",
+  "version": "0.2.15",
   "main": "build/cjs/src/index.js",
   "module": "build/esm/src/index.js",
   "types": "build/esm/src/index.d.ts",
@@ -11,7 +10,11 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "keywords": ["edi", "edifact", "parser"],
+  "keywords": [
+    "edi",
+    "edifact",
+    "parser"
+  ],
   "readme": "README.md",
   "author": {
     "name": "Roman Vottner"
@@ -33,16 +36,18 @@
     }
   ],
   "lint-staged": {
-    "*.ts": ["biome lint --write", "biome format --write"]
+    "*.ts": [
+      "biome lint --write",
+      "biome format --write"
+    ]
   },
   "scripts": {
     "clean": "rm -rf ./build ./dist",
-    "lint": "biome format --write --no-errors-on-unmatched . && biome lint --write .",
+    "lint": "biome check --write --no-errors-on-unmatched",
     "check": "npm run check:tsc",
     "check:tsc": "tsc -p . --noEmit",
     "test": "jest spec",
     "coverage": "yarn test --coverage",
-    "lint:staged": "lint-staged",
     "prepack": "yarn lint && yarn build",
     "prepare": "husky || true",
     "build:cjs": "tsc -p tsconfig.cjs.json",
@@ -50,7 +55,7 @@
     "build": "yarn build:cjs && yarn build:esm"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.2.4",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/types": "^19.8.1",
@@ -59,25 +64,26 @@
     "@types/events": "3.0.3",
     "@types/htmlparser2": "^4.1.0",
     "@types/jest": "^30.0.0",
-    "@types/node": "^22.17.2",
+    "@types/node": "^22.18.3",
     "domhandler": "^5.0.3",
     "events": "^3.3.0",
-    "husky": "^9.1.4",
-    "jest": "^30.0.5",
+    "husky": "^9.1.7",
+    "jest": "^30.1.3",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^16.1.5",
     "ts-jest": "^29.4.1",
-    "ts-loader": "^9.5.2",
+    "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
     "webpack": "^5.101.3"
   },
   "dependencies": {
-    "@swc/core": "^1.13.3",
-    "axios": "^1.11.0",
+    "@swc/core": "^1.13.5",
+    "axios": "^1.12.2",
     "htmlparser2": "^10.0.0"
   },
-  "files": ["build/**/*"],
+  "files": [
+    "build/**/*"
+  ],
   "packageManager": "yarn@4.9.2"
 }
